[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["Magne Strømsnes <alaka2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = {extras = ["all"], version = "^0.95.1"}
pandera = "^0.14.5"
pandas = "^2.0.1"
numpy = "^1.24.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
